<resources>
    <!-- Other string resources-->

    <string name="user_name">User_name</string>
    <string name="company">Company</string>
    <string name="user_email">User_name</string>
    <string name="location">location</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="number">xx</string>
    <string name="search">search</string>
    <string name="search_hint">Input Hint</string>

    <string name="app_name">Submission1</string>
    <string name="user_username">\@%1$s</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorite">favorite</string>
    <string name="detail_title">Github User Profile</string>
    <string name="list_github">Github Users</string>
    <string name="favorite_title">Favorite</string>


</resources>


